# itertools-len

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  README.rst  itertools_len.py  pyproject.toml
.github/workflows/: ci.yml  python-package.yml
docs/: conf.py  index.rst  requirements.txt
src/itertools_len/: __init__.py
tests/: test_itertools_len.py
