[project]
name = 'itertools-len'
authors = [{ name = 'Philipp A.', email = 'flying-sheep@web.de' }]
urls.Source = 'https://github.com/flying-sheep/itertools-len'
urls.Documentation = 'https://itertools-len.readthedocs.io/'
readme = 'README.rst'
license = 'GPL-3.0-or-later'
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Typing :: Typed',
]
requires-python = '>= 3.11'
dynamic = ['version']

[project.optional-dependencies]
speedups = ['scipy']
test = ['pytest', 'pytest-cov']
docs = ['sphinx', 'furo']

[tool.hatch.version]
source = 'vcs'

[tool.hatch.envs.hatch-test]
features = ['test', 'speedups']
[[tool.hatch.envs.hatch-test.matrix]]
python = ['3.11', '3.13']

[tool.coverage.report]
exclude_also = [  # those are regexes
    'if TYPE_CHECKING:',
]

[tool.ruff]
src = ['src', 'tests']
[tool.ruff.lint]
select = ['ALL']
ignore = [
  'Q',      # Quotes covered by formatter
  'C408',   # dict() calls are fine
  'COM812', # Conflicts with formatter
  'E74',    # Ambiguous variable/class/… name
  'FIX002', # TODOs are OK
  'D101',   # Docstrings in classes are wrapped
  'D105',   # No need to document magic methods
  'D107',   # Docstrings in __init__ are also wrapped
  'D203',   # No blank line before class body
  'D212',   # Multi-line docstring summary should start at the first line
  'N801',   # We mirror itertools which uses lowercase class names
  'TD002',  # No TODO names
]
allowed-confusables = ['×', '’']
[tool.ruff.lint.extend-per-file-ignores]
'docs/*' = ['INP001'] # No __init__.py in docs
'tests/*' = [
    'D103',    # No docstrings necessary
    'INP001',  # No __init__.py in tests
    'PLR2004', # Magic values in tests are fine
    'S101',    # Pytest prefers assert
    'SLF001',  # Private access in test is file
]
[tool.ruff.lint.isort]
lines-after-imports = 2

[build-system]
requires = ['hatchling', 'hatch-vcs']
build-backend = 'hatchling.build'
